--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         },
 
         title: {
-          text: 'Highcharts scatter chart from CSV'  // EDIT to insert your chart title
+          text: 'Income and Test Scores in CT School Districts, 2009-13 '  // EDIT to insert your chart title
         },
 
         subtitle: {
-          text: 'View <a href="data-scatter.csv"> source data</a>', // EDIT link and text
+          text: 'View <a href="data-scatter.csv"> source data</a> From Trend CT, NY Times,Standford Ed Archive  ', // EDIT link and text
           useHTML: true
         },
 
@@ -52,13 +52,13 @@
 
         xAxis: {
           title: {
-            text: 'Insert x-axis label'  // EDIT to insert horizontal x-axis label
+            text: 'Median household income'  // EDIT to insert horizontal x-axis label
           }
         },
 
         yAxis: {
           title: {
-            text: 'Insert y-axis label'   // EDIT to insert vertical y-axis label
+            text: 'Grades levels above/below avrage'   // EDIT to insert vertical y-axis label
           }
         },
 
