--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         },
 
         title: {
-          text: 'Income and Test Scores in CT School Districts, 2009-13 '  // EDIT to insert your chart title
+          text: ' Math CAASP Results and English Learners in Selected CA Shool Districts '  // EDIT to insert your chart title
         },
 
         subtitle: {
-          text: 'View <a href="data-scatter.csv"> source data</a> From Trend CT, NY Times,Standford Ed Archive  ', // EDIT link and text
+          text: 'View <a href="data-scatter.csv"> source data</a> CA Department of Education   ', // EDIT link and text
           useHTML: true
         },
 
