--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 
         xAxis: {
           title: {
-            text: 'Median household income'  // EDIT to insert horizontal x-axis label
+            text: 'English Learners'  // EDIT to insert horizontal x-axis label
           }
         },
 
         yAxis: {
           title: {
-            text: 'Grades levels above/below avrage'   // EDIT to insert vertical y-axis label
+            text: '4th Grade CAASP Math 2016 Test Scores '   // EDIT to insert vertical y-axis label
           }
         },
 
